--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,7 @@ p{
     overflow:hidden;
     
 }
+
   input[type=text] {
       background-color: #fff;
       width: 100%;
@@ -374,8 +375,14 @@ p{
 
 .l-navbar{
     will-change: transform;
-    transition: transform 0.5s cubic-bezier(0, 0, 0.3, 1) 0s;
+    -webkit-transition: -webkit-transform .25s ease-out;
+    transition: -webkit-transform .25s ease-out;
+    transition: transform .25s ease-out;
+    transition: transform .25s ease-out,-webkit-transform .25s ease-out;
+    /*will-change: transform;
+    transition: transform 0.4s cubic-bezier(0, 0, 0.3, 1) 0s;*/
     transform: translate3d(-102%,0,0);
+    height: 100vh;
     width: 80%;
     background: white;
     left: 0%;
@@ -383,7 +390,7 @@ p{
     top: 0%;
     z-index: 1200000000;
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.3);
-    /*overflow: auto;*/
+    overflow:hidden;
     white-space: nowrap;
 }
 
@@ -393,10 +400,10 @@ p{
 }
 .l-navbar-2{
     position: relative;
-    height: 100vh;
+    height: 100%;
     overflow-x: scroll;
     white-space: nowrap;
-    padding-bottom: 40px;
+    padding-bottom: 25px;
 }
   
 .nav-item2 p {
