--- a/css/style.css
+++ b/css/style.css
@@ -374,13 +374,14 @@ p{
 
 
 .l-navbar{
-    will-change: transform;
+    /*will-change: transform;
     -webkit-transition: -webkit-transform .25s ease-out;
     transition: -webkit-transform .25s ease-out;
     transition: transform .25s ease-out;
     transition: transform .25s ease-out,-webkit-transform .25s ease-out;
-    /*will-change: transform;
-    transition: transform 0.4s cubic-bezier(0, 0, 0.3, 1) 0s;*/
+    */
+    will-change: transform;
+    transition: transform 0.4s cubic-bezier(0, 0, 0.3, 1) 0s;
     transform: translate3d(-102%,0,0);
     height: 100vh;
     width: 80%;
@@ -585,6 +586,19 @@ yt-img-shadow {
     padding: 10px;
     font-size: 18px;
     cursor: pointer;  
+}
+
+.menu-btn.fade_show{
+    display: block;
+    animation: fade_menu_ex 0.8s;
+}
+@keyframes fade_menu_ex{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
 }
 
 /*navbar end*/
