--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ p{
     font-size: 20px;
     border-left: 0px solid;
     border: none;
+    z-index: 99999;
 }
 
 .search1:hover{
@@ -170,14 +171,16 @@ p{
     position: absolute;
     border-bottom: none;
     border-top: none;
-    z-index: 99;
+    z-index: 9999;
+    background-color: white;
     /*position the autocomplete items to be the same width as the container:*/
     top: 98%;
     left: 0;
     right: 0;
     max-height: 176px!important;
     overflow:hidden;
-    
+
+    box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 25%);
 }
 
   input[type=text] {
@@ -217,7 +220,7 @@ p{
 }
 
 .can1{
-    z-index: 6;
+    z-index: 999999;
     display: none;
     fill: currentColor;  
     color: #cac9c9!important;
@@ -232,6 +235,7 @@ p{
 .comment-2{
     border-right: 0px solid;
     border: none;
+    z-index: 99999!important;
 }
 
 /*burger start*/
@@ -371,8 +375,6 @@ p{
     display: block!important;
     /*box-shadow: 0 5px 10px 0 rgba(0,0,0,0.3);*/
 }
-
-
 .l-navbar{
     /*will-change: transform;
     -webkit-transition: -webkit-transform .25s ease-out;
@@ -386,13 +388,12 @@ p{
     height: 100vh;
     width: 80%;
     background: white;
-    left: 0%;
-    position: fixed;
-    top: 0%;
     z-index: 1200000000;
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.3);
     overflow:hidden;
     white-space: nowrap;
+    position:fixed;
+    top: 0px;
 }
 
 .nav-item2{
@@ -400,8 +401,7 @@ p{
     background: linear-gradient(to right ,#15c9f6 0% ,#15c9f6 0% , #15c9f6 100%);
 }
 .l-navbar-2{
-    position: relative;
-    height: 100%;
+    height: 100vh;
     overflow-x: scroll;
     white-space: nowrap;
     padding-bottom: 25px;
@@ -590,7 +590,7 @@ yt-img-shadow {
 
 .menu-btn.fade_show{
     display: block;
-    animation: fade_menu_ex 1s;
+    animation: fade_menu_ex 1.1s;
 }
 @keyframes fade_menu_ex{
     0%{
